<resources>
    <string name="app_name">My_StudyA</string>
    <string name="selectView">40</string>
    <string name="selectBtn">선택완료</string>
    <string name="radio3">3</string>
    <string name="radio2">2</string>
    <string name="radio1">1</string>
    <string name="reset">초기화하기</string>
    <string name="hintAge">나이를 입력하세요</string>
    <string name="age">나이</string>
    <string name="hintName">이름을 입력하세요</string>
    <string name="name">이름</string>
    <string name="tvInfo">Name은 Age살 입니다.</string>
</resources>